# hyprland-paper

./: Cargo.toml  README.md  hyprpaper.conf
src/: main.rs
